# Patched-together-file-system-ptfs-

./: Cargo.toml  README.md
benches/: cache_bench.rs  dedup_bench.rs  io_bench.rs
crates/ptfs-core/: Cargo.toml
crates/ptfs-core/src/: fs.rs  inode.rs  lib.rs  object.rs  object_store.rs  snapshot.rs  transaction.rs  versioning.rs
crates/ptfs-fuse/: Cargo.toml
crates/ptfs-kernel/: null.md
docs/: api.md  architecture.md  distributed.md  journaling.md  merkle-tree.md  storage-model.md
examples/: distributed_cluster.rs  simple_fs.rs  snapshot_demo.rs
scripts/: benchmark.sh  format.sh  test.sh
tests/allocator/: allocation_edge_cases.rs  extent_allocation.rs  fragmentation_tracking.rs  free_list_merge.rs  tiering_policy.rs
tests/cache/: arc_eviction.rs  cache_hit_miss.rs  cache_pressure.rs  l2arc_behavior.rs  write_buffer_flush.rs
tests/compression/: compression_ratio.rs  compression_roundtrip.rs  lz4_validation.rs  pipeline_order.rs  zstd_validation.rs
tests/deduplication/: chunk_dedup.rs  dedup_storage_savings.rs  duplicate_detection.rs  index_consistency.rs
tests/defrag/: defrag_stability.rs  drive_defrag.rs  file_defrag.rs  fragmentation_metrics.rs  vdrive_defrag.rs
tests/distributed/: failover_recovery.rs  network_partition.rs  node_join_leave.rs  quorum_majority.rs  replication_consistency.rs  split_brain_simulation.rs
tests/encryption/: encryption_roundtrip.rs  key_rotation.rs  multi_layer_encryption.rs  secure_delete.rs  tamper_detection.rs
tests/integration/: basic_fs.rs  metadata_consistency.rs  object_lifecycle.rs  recovery_after_crash.rs  (+2 more)
(+107 files in other folders)
