```toml
[package]
name = "ptfs-core"
version = "0.1.0"
edition = "2021"
description = "Core filesystem logic for PTFS (Patched-Together File System)"
license = "MIT"
authors = ["PTFS Contributors"]

[lib]
name = "ptfs_core"
path = "src/lib.rs"

[dependencies]
# Workspace shared deps
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
tokio = { workspace = true }

# Core-specific deps
rand = "0.8"              # Temporary ID generation (replace later)
uuid = { version = "1", features = ["v4"] }  # Optional stable IDs
parking_lot = "0.12"      # Faster locking than std::sync
log = "0.4"               # Logging
```
